--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,18 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+	<ion-navbar>
+		<ion-title>
+			MonBanquet Todo List
+		</ion-title>
+		<!-- Addind an "Add" button to the right of the navbar -->
+		<ion-buttons end>
+			<button ion-button icon-only (click)="addItem()"><ion-icon name="add-circle"></ion-icon></button>
+		</ion-buttons>
+	</ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+	The world is your oyster.
+	<p>
+		If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+	</p>
 </ion-content>
