--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,8 +11,8 @@
 </ion-header>
 
 <ion-content padding>
-	The world is your oyster.
-	<p>
-		If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-	</p>
+	<!-- Displaying the list of the items from the todo -->
+	<ion-list>
+		<ion-item *ngFor="let item of items" (click)="viewItem(item)">{{item.title}}</ion-item>
+	</ion-list>
 </ion-content>
