--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -1,15 +1,22 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      {{title}}
-    </ion-title>
-  </ion-navbar>
+	<ion-navbar>
+		<ion-title>
+			{{title}}
+		</ion-title>
+	</ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <ion-card-content>
-      {{description}}
-    </ion-card-content>
-  </ion-card>
+	<ion-card>
+		<ion-grid>
+			<ion-row>
+				<ion-col col-7>{{description}}</ion-col>
+				<ion-col col-5>
+					<button ion-button small color="secondary"><ion-icon name="play"></ion-icon></button>
+					<button ion-button small color="light"><ion-icon name="pause"></ion-icon></button>
+					<button ion-button small color="danger"><ion-icon name="square"></ion-icon></button>
+				</ion-col>
+			</ion-row>
+		</ion-grid>
+	</ion-card>
 </ion-content>
