--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -15,6 +15,7 @@
 					<button ion-button small color="secondary"><ion-icon name="play"></ion-icon></button>
 					<button ion-button small color="light"><ion-icon name="pause"></ion-icon></button>
 					<button ion-button small color="danger"><ion-icon name="square"></ion-icon></button>
+					<button ion-button small (click)="removeItem(item)" color="danger">Suppr</button>
 				</ion-col>
 			</ion-row>
 		</ion-grid>
