--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -15,11 +15,10 @@
 					<button ion-button small color="secondary"><ion-icon name="play"></ion-icon></button>
 					<button ion-button small color="light"><ion-icon name="pause"></ion-icon></button>
 					<button ion-button small color="danger"><ion-icon name="square"></ion-icon></button>
-					<button ion-button small (click)="removeItem(item)" color="danger">Suppr</button>
+					<!-- <button ion-button small (click)="removeItem(item)" color="danger">Suppr</button> -->
 				</ion-col>
 			</ion-row>
 		</ion-grid>
 	</ion-card>
-
 	<h1 class="timer" text-center>00:35</h1>
 </ion-content>
