--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -12,13 +12,18 @@
 			<ion-row>
 				<ion-col col-7>{{description}}</ion-col>
 				<ion-col col-5>
-					<button ion-button small color="secondary"><ion-icon name="play"></ion-icon></button>
-					<button ion-button small color="light"><ion-icon name="pause"></ion-icon></button>
-					<button ion-button small color="danger"><ion-icon name="square"></ion-icon></button>
-					<!-- <button ion-button small (click)="removeItem(item)" color="danger">Suppr</button> -->
+					<div id="chronoExample">
+						<button class="startButton" ion-button small color="secondary"><ion-icon name="play"></ion-icon></button>
+						<button class="pauseButton" ion-button small color="light"><ion-icon name="pause"></ion-icon></button>
+						<button class="stopButton" ion-button small color="danger"><ion-icon name="square"></ion-icon></button>
+					</div>
 				</ion-col>
 			</ion-row>
 		</ion-grid>
 	</ion-card>
-	<h1 class="timer" text-center>00:35</h1>
+
+	<div id="chronoExample">
+		<div class="values">00:00:00</div>
+	</div>
+
 </ion-content>
