Changed the title and edited the grid

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
 	<ion-navbar>
 		<ion-title>
-			MonBanquet Todo List
+			Todo List
 		</ion-title>
 		<!-- Addind an "Add" button to the right of the navbar -->
 		<ion-buttons end>
